# Coordinated-Multi-Agent-Imitation-Learning

./: .gitignore  main.py  pyproject.toml
.devcontainer/: devcontainer.json
code/: BreakDowns.ipynb
scripts/: setup_data.sh
