[project]
name = "coordinated-multi-agent-imitation-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6,<3.10"
dependencies = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
]
